Changes:   - Updated OpenAPI definition Fix:   - Incorrect route for class ID based routes
